# rag_llm

./: .gitignore  LICENSE  Prompt_01.txt  README.md  local_llm.py  my_document.txt  pyproject.toml  test_local_llm.ipynb
