[tool.poetry]
name = "rag-llm"
version = "0.1.0"
description = "Testing of Retrieval Augmented Generation (RAG) with LLM"
authors = ["Vadim <sharvadim07@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.2"
langchain = "^0.1.5"
langchain-community = "^0.0.17"
langchainhub = "^0.1.14"
qdrant-client = "^1.7.2"
pysqlite3-binary = "^0.5.2.post3"
chromadb = "0.4.0"
torch = "^2.2.0"
sentence-transformers = "^2.3.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
black = "^24.1.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.8.0"
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
